classes css: fix too small classes info font

--- a/assets/css/classes.scss
+++ b/assets/css/classes.scss
@@ -38,8 +38,6 @@
 
         .info {
           margin-top: 10px;
-          font-size: 13px;
-          font-weight: 400;
           color: #585c62;
         }
       }
